2000-08-03  Ramiro Estrugo  <ramiro@eazel.com>

	* data/mime/gnome-vfs.keys:

	Add the mozilal component as a content handler for
	x-special/webdav-directory.  Also move the gtkhtml web browser up
	in the food chain.
	
2000-08-03  John Sullivan  <sullivan@eazel.com>

	* data/mime/gnome-vfs.keys: Added a couple of description-less
	types that people had run into (image/x-xfig and application/x-compress).
	Also removed one of the two different descriptions for image/x-xpixmap.
	Also alphabetized the entries again -- someone changed some MIME
	type names without re-alphabetizing.

2000-08-03  Mathieu Lacage  <set EMAIL_ADDRESS environment variable>

	* libgnomevfs/gnome-vfs-mime-info.c: (gnome_vfs_mime_init): 
	remove FIXMEs for bug 796.
	* libgnomevfs/gnome-vfs-mime.c: (mime_init): idem.

2000-08-02  Pavel Cisler  <pavel@eazel.com>

	Seth forgot to check in changes Nautilus relies on and
	unfortunately they are nowhere to be found on his machine.
	This change will make Nautilus build again. Seth needs to check
	in his missing changes to make symlink creation work properly.

	* libgnomevfs/gnome-vfs-types.h:

2000-08-02  Gene Z. Ragan  <gzr@eazel.com>

	Fixed bug 1837, The icon in the action list item
	should represent the item in the list.
	
	* mime-type-capplet/nautilus-mime-type-capplet.c:
	(populate_mime_list):
	Load icon and display based on action.
	
2000-08-02  Darin Adler  <darin@eazel.com>

	* libgnomevfs/gnome-vfs-module-shared.c:
	(gnome_vfs_mime_type_from_mode), (gnome_vfs_get_special_mime_type):
	Removed some old FIXMEs that were left after the bug was fixed.

2000-08-02  Gene Z. Ragan  <gzr@eazel.com>

	Fixed bug 1836, Description list item icon wrong.
	
	* mime-type-capplet/nautilus-mime-type-capplet.c:
	(populate_mime_list), (gdk_font_get_bold),
	Set up proper and scaled description column icon.
	
	(capplet_gdk_pixbuf_scale_to_fit):
	New function that scales an gdk-pixbuf to the requested
	width and height.  Copied from libnautilus.
